--- a/pnu_mini_project01/package.json
+++ b/pnu_mini_project01/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
     "jotai": "^2.12.5",
     "next": "15.3.3",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "tailwindcss-animated": "^2.0.0"
   },
